src/test/scala/wacc/wacc_examples/invalid/semanticErr/function/tail_recursive_functions/noRecursion.wacc
begin
    @tailrec # this is not a recursive function so this is semenatically invalid
    int sumToFive(int x) is
        while (x != 5)
        do 
            x = x + 1 ;
            println x
        done ;
        return x
    end
    int x = call sumToFive(0) ;
    exit x    
end